--- a/main.css
+++ b/main.css
@@ -9,7 +9,7 @@ canvas {
     position: absolute;
     top: 0;
     left: 0;
-    z-index: -2
+    z-index: -2;
 }
 
 #header {
@@ -18,6 +18,15 @@ canvas {
     height: 70vh;
     margin: 0;
     margin-bottom: 10vh;
+    overflow: hidden;
+}
+
+#header img {
+    top: -20%;
+    object-fit: cover;
+    position: absolute;
+    width: 100vw;
+    z-index: -3;
 }
 
 #header::after {
@@ -25,7 +34,7 @@ canvas {
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 20vh;
+    height: 70vh;
     background: linear-gradient(to bottom, rgba(14,17,15,0), rgba(14,17,15,1));
     z-index: -1;
 }
