--- a/main.css
+++ b/main.css
@@ -308,6 +308,11 @@ section {
     box-shadow: 0 0 .5rem #f1e9ed80;
 }
 
+.infoSec:hover img {
+    opacity: 100%;
+    transition: .1s;
+}
+
 .xtraPad {
     padding-top: .5rem;
 }
@@ -401,6 +406,12 @@ section {
     margin-left: auto;
     margin-right: auto;
     padding-bottom: 1rem;
+    transition: 0.1s;
+    transform-origin: center;
+}
+
+.award svg:hover {
+    transform: scale(1.1);
 }
 
 .award .subSubTitle {
